--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,6 @@ find_package(Qt5Core REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Gui REQUIRED)
 
-#include_directories(/usr/include/qt/QtCore/)
-#include_directories(/usr/include/qt/QtWidgets/)
-#include_directories(/usr/include/qt/QtGui/)
-#include_directories(${Qt5Widgets_INCLUDES})
-
-#include_directories(/usr/include)
-
 # only for colouring syntax in clion
 set(SOURCE_FILES
         src/main.cpp
@@ -34,7 +27,7 @@ set(SOURCE_FILES
         src/dispatcher/Event.cpp src/dispatcher/Event.h
         src/config/ConfigLoader.cpp src/config/ConfigLoader.h
         src/config/Database.cpp src/config/Database.h
-        src/errors/Error.h
+        src/errors/Error.h src/errors/Error.cpp
         src/filesystem/FileSystem.cpp src/filesystem/FileSystem.h
         src/filesystem/LocalFS.cpp src/filesystem/LocalFS.h
         src/filesystem/ADB.cpp src/filesystem/ADB.h
@@ -54,7 +47,9 @@ set(SOURCE_FILES
         src/threads/LoopThread.cpp src/threads/LoopThread.h
         src/App.cpp src/App.h
         src/config/ConfigProperties.cpp src/config/ConfigProperties.h
-        src/utils/string_utils.cpp src/utils/string_utils.h src/errors/SystemCmdError.cpp src/errors/SystemCmdError.h src/errors/Error.cpp src/errors/SystemCmdError.cpp)
+        src/utils/string_utils.cpp src/utils/string_utils.h
+        src/errors/SystemCmdError.cpp src/errors/SystemCmdError.h
+        )
 
 # highlighted included qt libraries
 add_executable(cmakebuilt ${SOURCE_FILES})
