--- a/bin/config.properties
+++ b/bin/config.properties
@@ -1,5 +1,5 @@
-# database.1.localPath = /mnt/data/Igrek/mp3
-# database.1.remotePath = /storage/extSdCard/mp3
-
 database.1.localPath = /mnt/data/Igrek/guitarDB
 database.1.remotePath = /storage/extSdCard/guitarDB
+
+database.2.localPath = /mnt/data/Igrek/mp3
+database.2.remotePath = /storage/extSdCard/mp3
