Added excluding files by names

--- a/bin/config.properties
+++ b/bin/config.properties
@@ -3,3 +3,5 @@ database.1.remotePath = /storage/extSdCard/guitarDB
 
 database.2.localPath = /mnt/data/Igrek/mp3
 database.2.remotePath = /storage/extSdCard/mp3
+
+excludedFiles = .git
