--- a/bin/config.properties
+++ b/bin/config.properties
@@ -1,7 +1,7 @@
 database.1.localPath = /mnt/data/Igrek/guitarDB
-database.1.remotePath = /storage/extSdCard/guitarDB
+database.1.remotePath = /storage/6D49-845B/guitarDB
 
 database.2.localPath = /mnt/data/Igrek/mp3
-database.2.remotePath = /storage/extSdCard/mp3
+database.2.remotePath = /storage/6D49-845B/mp3
 
 excludedFiles = .git
