--- a/bin/config.properties
+++ b/bin/config.properties
@@ -2,6 +2,6 @@
 #database.1.remotePath = /storage/6D49-845B/guitarDB
 
 database.1.localPath = /mnt/data/Igrek/mp3
-database.1.remotePath = /storage/DD99-B30F/mp3
+database.1.remotePath = /storage/0123-4567/mp3
 
 excludedFiles = .git
